@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile.common,v 1.17 2010/07/31 15:01:12 tsutsui Exp $
+#	$NetBSD: Makefile.common,v 1.18 2010/08/01 06:24:31 kiyohara Exp $
 
 # These define parts of the Xserver tree that are to be
 # conditionally compiled for different platforms.  See
@@ -9,6 +9,7 @@
 .if \
     ${MACHINE} == "alpha"	|| \
     ${MACHINE} == "amd64"	|| \
+    ${MACHINE} == "bebox"	|| \
     ${MACHINE} == "cats"	|| \
     ${MACHINE} == "dreamcast"	|| \
     ${MACHINE} == "hpcarm"	|| \
